--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "webtorrent": "^0.98.0"
   },
   "scripts": {
-    "prestart": "npm install && bower install && sh checkMongo.sh",
+    "prestart": "bash checkMongo2.sh",
     "start": "node server.js",
     "build": "bower install"
   },
